# EducAI

./: .env.example  .gitignore  COMMIT_SUMMARY.md  Makefile  README.md  SETUP_SECRETS.md  TIMELINE_FIXES_SUMMARY.txt  TIMELINE_FIX_VERIFICATION.md  docker-compose.yml  render.yaml  vercel.json
ai-server/: .coverage  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  pyproject.toml  requirements-render.txt  requirements.txt  setup.cfg
ai-server/app/: _pre_init.py  main.py
ai-server/app/LLM/: openapi.py
ai-server/app/api/: deps.py
ai-server/app/api/v1/: chat.py  gap_fix.py  health.py  jobs.py  module1_sync.py  news.py  recommendations.py  scrape_match.py  strategy.py
ai-server/app/core/: config.py  logger.py
ai-server/app/db/: base.py  prisma_connect.py  vectordb.py
ai-server/app/domains/embeddings/: openapi.py
ai-server/app/domains/ingestion/: server_client.py
ai-server/app/domains/jobs/: adzuna.py  jsearch.py  openai_fallback.py
ai-server/app/domains/reasoning/: llm_provider.py  rag_pipeline.py  xai.py
ai-server/app/domains/scrapping/: firecrawl_client.py  web_scrapper.py
ai-server/app/domains/searching/: webSearch.py
ai-server/app/middleware/: audit_log.py  secure_keys.py
ai-server/app/schemas/: education.py  jobs.py
ai-server/prisma/: schema.prisma
ai-server/scripts/: render-prisma-engine.sh  start.sh  stop.sh
ai-server/tests/: test_api.py  test_chat_schema.py  test_firecrawl_client.py  test_health.py  test_jobs.py  test_prisma_connect.py
docs/: ai-provider-audit.md  api-contracts.md  auto-commit.md  chatbot-rebuild-plan.md  (+35 more)
(+359 files in other folders)
